# R2AI

./: .env.example  .gitignore
VbplCrawler/: README.md  pyproject.toml
VbplCrawler/example/: crawl_to_docx.py  example.py
VbplCrawler/output/: 6d5fe720-54ed-11f1-9221-7bf9f45a9fb2.json  ebde45c0-5e60-11f1-8fbf-fba9197f5741.json
VbplCrawler/output/cong-ty-chl-docx/: '03_2025_QĐ-UBND_Quyết định số '03_2025_QĐ-UBND Ban hành Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của T.docx  '03_2025_QĐ-UBND_Quyết định số '03_2025_QĐ-UBND Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Sở Công Th.docx  '03_2025_QĐ-UBND_Quyết định số '03_2025_QĐ-UBND Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Sở Tài chí.docx  '04_2025_QĐ-UBND_Quyết định số '04_2025_QĐ-UBND Ban hành Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của T.docx  '05_2025_NQ-HĐND_Nghị quyết số '05_2025_NQ-HĐND Ban hành Quy định về phân cấp nguồn thu, nhiệm vụ chi và tỷ lệ phần trăm.docx  '07_2025_QĐ-UBND_Quyết định số '07_2025_QĐ-UBND Ban hành Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của S.docx  '08_2025_QĐ-UBND_Quyết định số '08_2025_QĐ-UBND Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Sở Công Th.docx  '10_2025_QĐ-UBND_Quyết định số '10_2025_QĐ-UBND Ban hành Quy định chức năng, nhiệm vụ, quyền hạn của Thanh tra tỉnh Lâm .docx  '10_2025_QĐ-UBND_Quyết định số '10_2025_QĐ-UBND Ban hành Quy định chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của S.docx  (+8206 more)
(+2037 files in other folders)
